[Feat]:  Improving rest structure, and implement exception handler and security layer
- Changed  the controllers structure allowing versioning
- Add ExceptionHandler to resolve exceptions
- Abstraction of services and repositories
- Changed the models adding DTO structure
- Standardization of responses with APIResponse.java
- Improving Documentations